Add JIB for Docker and JPA for Postgres.